# molten-rs

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  docker-compose.yml
config/: app.yaml
molten/: Cargo.toml
molten-api/: Cargo.toml
molten-api/src/: error.rs  handler.rs  lib.rs  main.rs  startup.rs  state.rs  telemetry.rs
molten-api/src/handlers/: document.rs  form.rs  mod.rs  workflow.rs
molten-config/: Cargo.toml
molten-config/src/: entity_parser.rs  error.rs  lib.rs  parser.rs  settings_parser.rs
molten-core/: Cargo.toml
molten-core/src/: document.rs  field.rs  fields.rs  form.rs  lib.rs  workflow.rs
molten-document/: Cargo.toml
molten-document/src/: error.rs  lib.rs  validator.rs
molten-migration/: Cargo.toml
molten-migration/src/: lib.rs  m20220101_000001_create_core_tables.rs  m20220101_000001_create_table.rs  main.rs
molten-service/: Cargo.toml
molten-service/src/: document_service.rs  error.rs  form_service.rs  lib.rs
molten-service/src/services/: document.rs  form.rs  mod.rs  workflow.rs
molten-storage-seaorm/: Cargo.toml
molten-storage-seaorm/src/: lib.rs
molten-storage-seaorm/src/entities/: document.rs  form.rs  mod.rs  prelude.rs  workflow.rs
molten-storage-seaorm/src/repo/: document.rs  form.rs  mod.rs  workflow.rs
molten-workflow/: Cargo.toml
molten-workflow/src/: engine.rs  error.rs  lib.rs
molten/src/: lib.rs
tests/molten-api/: helpers.rs
