[package]
name = "molten-api"
version = "0.0.2"
edition = "2024"
license = "Apache-2.0"
description = "Axum-based REST API for the Molten document and workflow management system"
repository = "https://github.com/LeeSomm/molten-rs"
documentation = "https://docs.rs/molten-api"
homepage = "https://github.com/LeeSomm/molten-rs"

[dependencies]
# Internal Crates
molten-core = { version = "0.0.2", path = "../molten-core" }
molten-service = { version = "0.0.2", path = "../molten-service" }
molten-config = { version = "0.0.2", path = "../molten-config" }
molten-storage-seaorm = { version = "0.0.2", path = "../molten-storage-seaorm" }

# Web Framework
axum = { version = "0.8.8", features = ["macros"] }
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# Data & DB
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sea-orm = { version = "1.1.19", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
dotenvy = "0.15.7" # To load .env file
anyhow = "1.0.100"
tracing-log = "0.2.0"
thiserror = "2.0.18"
