[package]
name = "molten-config"
version = "0.0.1"
edition = "2024"
license = "Apache-2.0"
description = "Configuration schema parsing and validation for Molten (YAML, TOML, JSON)"
repository = "https://github.com/LeeSomm/molten-rs"
documentation = "https://docs.rs/molten-config"
homepage = "https://github.com/LeeSomm/molten-rs"

[dependencies]
