[package]
name = "molten-config"
version = "0.0.1"
edition = "2024"
license = "Apache-2.0"
description = "Configuration schema parsing and validation for Molten (YAML, TOML, JSON)"
repository = "https://github.com/LeeSomm/molten-rs"
documentation = "https://docs.rs/molten-config"
homepage = "https://github.com/LeeSomm/molten-rs"

[dependencies]
molten-core = { path = "../molten-core" }
serde = "1.0.228"
serde_json = "1.0.149"
serde_yaml = "0.9.34"
thiserror = "2.0.18"
toml = "0.9.11"
validator = "0.20.0"
