[package]
name = "molten-config"
version = "0.0.1"
edition = "2024"
license = "Apache-2.0"
description = "Configuration schema parsing and validation for Molten (YAML, TOML, JSON)"
repository = "https://github.com/LeeSomm/molten-rs"
documentation = "https://docs.rs/molten-config"
homepage = "https://github.com/LeeSomm/molten-rs"

[dependencies]
# Internal Crates
molten-core = { version = "0.0.1", path = "../molten-core" }

config = "0.15.19"
sea-orm = "1.1.19"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = "1.0.228"
serde-aux = "4.7.0"
serde_json = "1.0.149"
serde_yaml = "0.9.34"
temp-env = "0.3.6"
tempfile = "3.24.0"
thiserror = "2.0.18"
toml = "0.9.11"
validator = "0.20.0"
