[package]
name = "molten-core"
version = "0.0.1"
edition = "2024"
license = "Apache-2.0"
description = "Core domain models, traits, and types for the Molten document and workflow management system"
repository = "https://github.com/LeeSomm/molten-rs"
documentation = "https://docs.rs/molten-core"
homepage = "https://github.com/LeeSomm/molten-rs"

[dependencies]
