[package]
name = "molten-core"
version = "0.0.1"
edition = "2024"
license = "Apache-2.0"
description = "Core domain models, traits, and types for the Molten document and workflow management system"
repository = "https://github.com/LeeSomm/molten-rs"
documentation = "https://docs.rs/molten-core"
homepage = "https://github.com/LeeSomm/molten-rs"

[dependencies]
chrono = { version = "0.4.43", features = ["serde"] }
once_cell = "1.21.3"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
validator = { version = "0.20.0", features = ["derive"]}
