[package]
name = "molten-document"
version = "0.0.2"
edition = "2024"
license = "Apache-2.0"
description = "Document schema definitions, field types, and validation for Molten"
repository = "https://github.com/LeeSomm/molten-rs"
documentation = "https://docs.rs/molten-document"
homepage = "https://github.com/LeeSomm/molten-rs"

[dependencies]
# Internal Crates
molten-core = { version = "0.0.2", path = "../molten-core" }

chrono = "0.4.43"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
