[package]
name = "molten-service"
version = "0.0.1"
edition = "2024"
license = "Apache-2.0"
description = "Application orchestration and business logic layer for Molten"
repository = "https://github.com/LeeSomm/molten-rs"
documentation = "https://docs.rs/molten-service"
homepage = "https://github.com/LeeSomm/molten-rs"


[dependencies]
molten-core = { path = "../molten-core" }
molten-document = { path = "../molten-document" }
molten-workflow = { path = "../molten-workflow" }
molten-storage-seaorm = { path = "../molten-storage-seaorm" }

anyhow = "1.0.100"
chrono = "0.4.43"
sea-orm = "1.1.19"
serde = "1.0.228"
serde_json = "1.0.149"
thiserror = "2.0.18"
uuid = { version = "1.20.0", features = ["v4"] }
