[package]
name = "molten-service"
version = "0.0.2"
edition = "2024"
license = "Apache-2.0"
description = "Application orchestration and business logic layer for Molten"
repository = "https://github.com/LeeSomm/molten-rs"
documentation = "https://docs.rs/molten-service"
homepage = "https://github.com/LeeSomm/molten-rs"


[dependencies]
# Internal Crates
molten-core = { version = "0.0.2", path = "../molten-core" }
molten-document = { version = "0.0.2", path = "../molten-document" }
molten-workflow = { version = "0.0.2", path = "../molten-workflow" }
molten-storage-seaorm = { version = "0.0.2", path = "../molten-storage-seaorm" }

anyhow = "1.0.100"
serde_json = "1.0.149"
thiserror = "2.0.18"
uuid = { version = "1.20.0", features = ["v4"] }
validator = "0.20.0"
