[package]
name = "molten-storage-seaorm"
version = "0.0.2"
edition = "2024"
license = "Apache-2.0"
description = "SeaORM database persistence implementation for Molten"
repository = "https://github.com/LeeSomm/molten-rs"
documentation = "https://docs.rs/molten-storage-seaorm"
homepage = "https://github.com/LeeSomm/molten-rs"


[dependencies]
# Internal Crates
molten-core = { version = "0.0.2", path = "../molten-core" }

chrono = "0.4.43"
sea-orm = { version = "2.0.0-rc.34", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
anyhow = "1.0.100"
